--- a/src/App.css
+++ b/src/App.css
@@ -15,21 +15,19 @@
 
  .card-body {
    background-color: #212529 !important;
-   /* bg-dark */
    transition: all 0.3s ease;
    cursor: default;
  }
 
  .card-body:hover {
    box-shadow: 0 0 15px rgba(0, 123, 255, 0.4);
-   /* Sombra azul al pasar el ratón */
  }
 
 
  .timeline-line {
    width: 3px;
    height: 100%;
-   margin-top: 8px;
+   margin-top: 10px;
 
  }
 
@@ -43,4 +41,27 @@
    background-color: #1a1a1a;
    padding-top: 3rem;
    padding-bottom: 3rem;
+   transition: all 0.7s ease-in-out;
+ }
+
+ .app-container-center {
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+ }
+
+ .fade-in {
+   animation: fadeIn 0.5s ease-out;
+ }
+
+ @keyframes fadeIn {
+   from {
+     opacity: 0;
+     transform: translateY(10px);
+   }
+
+   to {
+     opacity: 1;
+     transform: translateY(0);
+   }
  }
