--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,99 @@
    padding: 2rem;
    text-align: center;
    --bs-purple: #7033fd;
+   --bs-azul: #339afd;
+
  }
 
+/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------- */
+/* Estilo para la barra de scroll */
+
+::-webkit-scrollbar {
+    width: 10px; 
+    height: 10px; 
+}
+
+::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+    border-radius: 10px; 
+}
+
+::-webkit-scrollbar-thumb {
+    background: #555; 
+    border-radius: 10px; 
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+}
+/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------- */
+
+
+/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------- */
+ .bg-azul {
+   background-color: var(--bs-azul) !important;
+ }
+
+ .text-azul {
+   color: var(--bs-azul) !important;
+ }
+
+ .border-azul {
+   border-color: var(--bs-azul) !important;
+ }
+
+ .btn-outline-azul {
+   display: inline-block;
+   font-weight: 400;
+   line-height: 1.5;
+   text-align: center;
+   text-decoration: none;
+   vertical-align: middle;
+   cursor: pointer;
+   user-select: none;
+   border: 1px solid var(--bs-azul) !important;
+   padding: 0.375rem 0.75rem;
+   font-size: 1rem;
+   border-radius: 0.25rem;
+   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+   color: var(--bs-azul) !important;
+   background-color: transparent;
+   background-image: none;
+ }
+
+ .btn.btn-outline-azul:hover {
+   color: #fff !important;
+   background-color: var(--bs-azul) !important;
+   border-color: var(--bs-azul) !important;
+   box-shadow: none;
+ }
+
+ .btn.btn-outline-azul:focus {
+   /* Al hacer clic y soltar, vuelve al estilo outline transparente */
+   color: #fff;
+   background-color: transparent;
+   border-color: var(--bs-azul) !important;
+ }
+
+ .btn.btn-outline-azul:active {
+   color: #fff !important;
+   background-color: transparent;
+   border-color: var(--bs-azul) !important;
+   box-shadow: none;
+ }
+
+ .btn-outline-azul:disabled {
+   color: #fff !important;
+   background-color: transparent;
+   border-color: var(--bs-azul) !important;
+   opacity: 0.65;
+ }
+
+ /* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------- */
+
+
+
+ /* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------- */
  .bg-purple {
    background-color: var(--bs-purple) !important;
  }
@@ -18,7 +109,6 @@
    border-color: var(--bs-purple) !important;
  }
 
- /* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------- */
  .btn-outline-purple {
    display: inline-block;
    font-weight: 400;
@@ -33,7 +123,7 @@
    font-size: 1rem;
    border-radius: 0.25rem;
    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-   color: var(--bs-purple) !important;   
+   color: var(--bs-purple) !important;
    background-color: transparent;
    background-image: none;
  }
@@ -65,6 +155,7 @@
    border-color: var(--bs-purple) !important;
    opacity: 0.65;
  }
+
  /* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------- */
 
 
@@ -86,6 +177,16 @@
    box-shadow: 0 0 15px #7033fd;
  }
 
+
+ .card-body-azul {
+   background-color: #212529 !important;
+   transition: all 0.3s ease;
+   cursor: default;
+ }
+
+ .card-body-azul:hover {
+   box-shadow: 0 0 15px var(--bs-azul) !important;
+ }
 
 
  .rounded-3 {
