--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,7 @@
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: #555; 
+    background: #2b2a2a; 
 }
 /* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------- */
 
